--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -5,5 +5,13 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
-  background-color: #282c34;
+  background-color: #ebeae6;
+  flex-direction: column;
+}
+.Home > h3 {
+  font-size: 100px;
+  position: relative;
+  top: -100px;
+  color: #cfb5dd;
+  font-weight: 500;
 }
