--- a/src/style/Records.css
+++ b/src/style/Records.css
@@ -1,23 +1,34 @@
 .records {
   background-color: #fff;
   width: 300px;
-  height: 100%;
+  height: 300px;
+  border-radius: 5px;
+  padding: 20px 20px;
+}
+.records .records_text {
+  padding: 10px 20px;
 }
 .records .records_text > p {
   text-align: center;
-  font-size: 25px;
+  font-size: 30px;
   color: #fff;
+  line-height: 30px;
 }
 
 .records .records_wrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .records .records_wrapper .records_video {
-  border-bottom: 2px solid #fff;
   height: 100%;
 }
-.records .records_text .ache_tag{
- display: flex;
- gap: 3px;
+.records .records_wrapper .records_video > iframe {
+  border-radius: 5px;
+}
+.records .records_text .ache_tag {
+  display: flex;
+  gap: 3px;
 }
