--- a/src/style/SearchPlace.css
+++ b/src/style/SearchPlace.css
@@ -6,6 +6,9 @@
   width: 25%;
   max-width: 100%;
   background-color: #eef7fe;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
 }
 .search_container .form_container {
   padding: 20px 20px;
@@ -31,6 +34,7 @@
   border: 3px solid rgb(102, 166, 102);
   outline: none;
   border-radius: 5px;
+  font-size: 20px;
 }
 .search_container .form_container > button {
   background: #00ae68;
@@ -46,21 +50,5 @@
 }
 
 .searchPlace .search_container .content {
-  min-height: 500px;
-  max-height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
   padding: 10px 20px;
-}
-.searchPlace .search_container .content::-webkit-scrollbar {
-  width: 10px;
-}
-.searchPlace .search_container .content::-webkit-scrollbar-thumb {
-  background-color: #aac4c0;
-  border-radius: 10px;
-}
-.searchPlace .search_container .content::-webkit-scrollbar-track {
-  background-color: rgb(250, 250, 250);
-  border-radius: 10px;
-  box-shadow: inset 0px 0px 5px white;
 }
